# simple_multi_chat

./: .gitignore  CMakeLists.txt  README.md
include/: chat_client.h  chat_server.h  network.h
src/: chat_client.cpp  chat_server.cpp  main.cpp  network.cpp
